<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <TextView
        android:id="@+id/welcome_nos"
        style="@style/BiggerText"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_default_padding"
        android:text="@string/whats_your_address"
        android:textSize="24dp" />

    <co.nos.noswallet.ui.common.MaterialSpinner
        android:id="@+id/address_country_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_nos"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding" />

    <co.nos.noswallet.ui.common.InputLayout
        android:id="@+id/address_postal_code"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_country_picker"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:hint="@string/postal_code" />

    <co.nos.noswallet.ui.common.InputLayout
        android:id="@+id/address_part_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/address_postal_code"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:hint="@string/address_line_1_hint" />

    <co.nos.noswallet.ui.common.InputLayout
        android:id="@+id/address_part_2"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_part_1"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:hint="@string/address_line_2_hint" />

    <co.nos.noswallet.ui.common.InputLayout
        android:id="@+id/address_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/address_part_2"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:hint="@string/address_street_hint" />

    <co.nos.noswallet.ui.common.InputLayout
        android:id="@+id/address_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_street"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:hint="@string/address_region_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/kyc_1_continue"
        style="@style/CancelButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/_continue" />

</RelativeLayout>