<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/bright_white"
    android:orientation="vertical">

    <include
        android:id="@+id/dialog_appbar"
        layout="@layout/view_appbar_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.SearchView
        android:id="@+id/addressbook_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_appbar"
        android:queryHint="@string/search" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/addressbook_searchview"
        android:layout_width="match_parent"
        android:id="@+id/addressbook_recyclerview"
        android:layout_height="match_parent"/>


    <TextView
        android:id="@+id/addressbook_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_addresses"
        android:textSize="20dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addressbook_add_new"
        style="@style/LargeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/add_address" />

</RelativeLayout>
